权限信息等更新

--- a/src/main/resources/dataSource.properties
+++ b/src/main/resources/dataSource.properties
@@ -1,24 +1,24 @@
-#³õÊ¼»¯»ñÈ¡µÄÁ¬½ÓÊý È¡ÖµÔÚminPoolSizeºÍmaxPoolSizeÖ®¼ä
+#ï¿½ï¿½Ê¼ï¿½ï¿½ï¿½ï¿½È¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ È¡Öµï¿½ï¿½minPoolSizeï¿½ï¿½maxPoolSizeÖ®ï¿½ï¿½
 database.initSize=5
 database.maxSize=15
-#Êý¾Ý¿âÁ¬½ÓÓÃ»§Ãû
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ï¿½
 database.username=root
-#Êý¾Ý¿âÁ¬½ÓÃÜÂë
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 database.pwd=root
-#Êý¾Ý¿âÁ¬½ÓµØÖ·
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½Óµï¿½Ö·
 database.url=jdbc:mysql://10.2.65.107:3306/pwq?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
-#Êý¾Ý¿âÁ¬½ÓÇý¶¯
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 database.driverClass=com.mysql.jdbc.Driver
-#µ±Á¬½Ó³ØÁ¬½ÓÊýºÄ¾¡Ê±c3p0Ò»´Î»ñÈ¡µÄÁ¬½ÓÊý
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¾ï¿½Ê±c3p0Ò»ï¿½Î»ï¿½È¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 database.acquireIncrement=3
-#µ±Á¬½Ó³ØÓÃÍêÊ±¿Í»§¶Ëµ÷ÓÃconnectionºóµÈ´ý»ñÈ¡ÐÂÁ¬½ÓµÄÊ±¼ä£¬³¬Ê±½«Å×³ösql Exception,Èç¹ûÉèÎª0ÔòÎÞÏÞÆÚµÈ´ý£¬µ¥Î»ÎªºÁÃë
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½Ê±ï¿½Í»ï¿½ï¿½Ëµï¿½ï¿½ï¿½connectionï¿½ï¿½È´ï¿½ï¿½ï¿½È¡ï¿½ï¿½ï¿½ï¿½ï¿½Óµï¿½Ê±ï¿½ä£¬ï¿½ï¿½Ê±ï¿½ï¿½ï¿½×³ï¿½sql Exception,ï¿½ï¿½ï¿½ï¿½ï¿½Îª0ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÚµÈ´ï¿½ï¿½ï¿½ï¿½ï¿½Î»Îªï¿½ï¿½ï¿½ï¿½
 database.checkoutTime=50000
-#¶àÉÙÊ±¼ä¼ì²éËùÓÐÁ¬½Ó³ØÖÐµÄ¿ÕÏÐÁ¬½Ó,µ¥Î»Ãë
+#ï¿½ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ÐµÄ¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½,ï¿½ï¿½Î»ï¿½ï¿½
 database.idleConnectTestPeriod=60
-#×î´ó¿ÕÏÐÊ±¼ä£¬60ÃëÎ´Ê¹ÓÃÔòÁ¬½Ó±»¶ªÆú ÈôÎª0ÔòÓÀ²»¶ªÆú
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê±ï¿½ä£¬60ï¿½ï¿½Î´Ê¹ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó±ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½Îª0ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 database.maxIdelTime=60
-#JDBC±ê×¼µÄ²ÎÊý£¬ÓÃÒÔ¿ØÖÆÊý¾ÝÔ´ÄÚ¼ÓÔØµÄPreparedStatementsÊýÁ¿£¬µ«ÓÉÓÚÓë»º´æµÄstatementsÊôÓÚµ¥¸öconnection¶ø²»ÊÇÕû¸öÁ¬½Ó³Ø¡£ËùÒÔÉèÖÃÕâ¸ö²ÎÊýÐèÒª¿¼ÂÇ¶à·½ÃæµÄÒòËØ
-#±ÈÈçmaxStatementÓëmaxStatementsPerConnectin¾ùÎª0Ôò»º´æ±»¹Ø±Õ
+#JDBCï¿½ï¿½×¼ï¿½Ä²ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½Ú¼ï¿½ï¿½Øµï¿½PreparedStatementsï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë»ºï¿½ï¿½ï¿½statementsï¿½ï¿½ï¿½Úµï¿½ï¿½ï¿½connectionï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó³Ø¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½Ç¶à·½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#ï¿½ï¿½ï¿½ï¿½maxStatementï¿½ï¿½maxStatementsPerConnectinï¿½ï¿½Îª0ï¿½ò»º´æ±»ï¿½Ø±ï¿½
 database.maxStatements=100
-#maxStatementPerConnectin¶¨ÒåÁËÁ¬½Ó³ØÄÚµÄµ¥¸öÁ¬½ÓËùÓµÓÐµÄ×î´ó»º´æµÄstatementsÊý
+#maxStatementPerConnectinï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ÚµÄµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Óµï¿½Ðµï¿½ï¿½ï¿½ó»º´ï¿½ï¿½statementsï¿½ï¿½
 database.maxStatementPerConnectin=50
