--- a/pom.xml
+++ b/pom.xml
@@ -25,31 +25,26 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.12</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/slf4j-api-1.7.12.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.12</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/slf4j-log4j12-1.7.12.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-web</artifactId>
       <version>2.6.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/log4j-web-2.6.2.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <version>2.6.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/log4j-core-2.6.2.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
       <version>2.6.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/log4j-api-2.6.2.jar</systemPath>
     </dependency>
 
     <!--spring相关组件-->
@@ -57,68 +52,57 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-core-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-context-support-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-context-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/log4j-api-2.6.2.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-webmvc-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-jdbc-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-expression</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-expression-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-beans-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-tx-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-orm-4.3.7.RELEASE.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-oxm</artifactId>
       <version>4.3.17.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-oxm-4.3.17.RELEASE.jar</systemPath>
     </dependency>
 
     <!--servlet相关组件-->
@@ -126,7 +110,6 @@
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/javax.servlet-api-3.1.0.jar</systemPath>
     </dependency>
 
     <!--aop相关组件-->
@@ -134,13 +117,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-aop-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
       <version>1.5.4</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/aspectjrt-1.5.4.jar</systemPath>
     </dependency>
 
     <!--其他组件-->
@@ -148,13 +129,11 @@
       <groupId>commons-collections</groupId>
       <artifactId> commons-collections</artifactId>
       <version>3.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-collections-3.2.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
       <version>1.8.9</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/aspectjweaver-1.8.9.jar</systemPath>
     </dependency>
 
     <!--数据库连接池-->
@@ -162,7 +141,6 @@
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
       <version>0.9.1.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/c3p0-0.9.1.2.jar</systemPath>
     </dependency>
 
     <!--文件上传组件-->
@@ -170,13 +148,11 @@
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.1</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-fileupload-1.3.1.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-io-2.4.jar</systemPath>
     </dependency>
 
     <!--jsckson配置-->
@@ -184,42 +160,36 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.8.0</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jackson-databind-2.8.0.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <version>2.8.0</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jackson-annotations-2.8.0.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.8.0</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jackson-core-2.8.0.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>4.0</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-collections4-4.0.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.3.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-lang3-3.3.2.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.8.3</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-beanutils-1.8.3.jar</systemPath>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -232,7 +202,6 @@
       <groupId>com.fasterxml</groupId>
       <artifactId>classmate</artifactId>
       <version>1.4.0</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/classmate-1.4.0.jar</systemPath>
     </dependency>
 
 
@@ -241,13 +210,11 @@
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jstl-1.2.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/standard-1.1.2.jar</systemPath>
     </dependency>
 
     <!--gson工具-->
@@ -255,7 +222,6 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/gson-2.8.5.jar</systemPath>
     </dependency>
 
     <!--配置sftp传输文件-->
@@ -263,7 +229,6 @@
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
       <version>0.1.54</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jsch-0.1.54.jar</systemPath>
     </dependency>
 
     <!--hibernate相关的jar-->
@@ -271,32 +236,27 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>5.3.2.Final</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/hibernate-core-5.3.2.Final.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.hibernate.common</groupId>
       <artifactId>hibernate-commons-annotations</artifactId>
       <version>5.0.5.Final</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/hibernate-commons-annotations-5.0.5.Final.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
       <version>5.3.2.Final</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/hibernate-validator-5.3.2.Final.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-ehcache</artifactId>
       <version>5.3.2.Final</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/hibernate-ehcache-5.3.2.Final.jar</systemPath>
     </dependency>
 
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.47</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/mysql-connector-java-5.1.47.jar</systemPath>
     </dependency>
 
 
@@ -304,13 +264,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>4.3.7.RELEASE</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-test-4.3.7.RELEASE.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/junit-4.12.jar</systemPath>
     </dependency>
 
     <!--cxf实现webService-->
@@ -319,26 +277,24 @@
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-frontend-jaxws</artifactId>
       <version>3.1.6</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/cxf-rt-frontend-jaxws-3.1.6.jar</systemPath>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-core -->
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-core</artifactId>
       <version>3.1.6</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/cxf-core-3.1.6.jar</systemPath>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-transports-http -->
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-transports-http</artifactId>
       <version>3.1.6</version>
-      <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/cxf-rt-transports-http-3.1.6.jar</systemPath>
     </dependency>
-
-
-
-
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.12</version>
+    </dependency>
   </dependencies>
 
   <build>
